Add main site structur.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,35 @@
   </head>
   <body>
 
+    <!-- navigation section -->
+    <nav>
+
+    </nav>
+
+    <!-- banner section -->
+    <div class="banner">
+
+    </div>
+
+    <!-- main section -->
+    <div class="">
+
+    </div>
+
+    <!-- start learning section -->
+    <div class="">
+
+    </div>
+
+    <!-- thesis exhibit section -->
+    <div class="">
+
+    </div>
+
+    <!-- banner section -->
+    <footer>
+
+    </footer>
+
   </body>
 </html>
