Add Navigation desktopan mobile view.

--- a/index.html
+++ b/index.html
@@ -5,35 +5,58 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:400,500,700|Roboto:400,700,900" rel="stylesheet">
   </head>
   <body>
 
     <!-- navigation section -->
-    <nav>
 
-    </nav>
+
+    <div class="navbardesktop">
+      <div class="logo">
+        <img src="./resources/images/ic-logo.svg" alt="">
+        <p><span id="logotext1">Colmar</span><span id="logotext2">Academy</span></p>
+      </div>
+
+      <nav>
+        <ul>
+          <li>On campus</li>
+          <li>Online</li>
+          <li>Our companies</li>
+          <li>Sign in</li>
+        </ul>
+      </nav>
+
+    </div>
+
+    <div class="navbarmobile">
+      <img src="./resources/images/ic-logo.svg" alt="">
+      <img src="./resources/images/ic-on-campus.svg" alt="">
+      <img src="./resources/images/ic-online.svg" alt="">
+      <img src="./resources/images/ic-login.svg" alt="">
+    </div>
 
     <!-- banner section -->
     <div class="banner">
 
     </div>
 
-    <!-- main section -->
-    <div class="">
+    <!-- article section -->
+    <div class="article">
 
     </div>
 
-    <!-- start learning section -->
-    <div class="">
+    <!-- course section -->
+    <div class="course">
 
     </div>
 
     <!-- thesis exhibit section -->
-    <div class="">
+    <div class="thesis">
 
     </div>
 
-    <!-- banner section -->
+    <!-- footer section -->
     <footer>
 
     </footer>
