--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
       <nav>
         <ul>
-          <li>On campus</li>
-          <li>Online</li>
-          <li>Our companies</li>
-          <li>Sign in</li>
+          <li><a href="#">On campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">Our companies</a></li>
+          <li><a href="#">Sign in</a></li>
         </ul>
       </nav>
 
@@ -51,31 +51,43 @@
     <div class="information">
       <div class="mainarticle">
         <img src="./resources/images/information-main.jpg" alt="">
-        <h4>It doesn't hurt to keep practicing</h4>
+        <h2>It doesn't hurt to keep practicing</h2>
         <p>"Cuabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         <p class="caption"> Emanuel, Sr Strategist ar Hiring.com</p>
       </div>
 
       <div class="articlelist">
         <div class="article">
-          <img src="./resources/images/information-orientation.jpg" alt="">
-          <h4>Orientation date</h4>
-          <p>Tue 10/11 & Wed 10/12: 8am-9pm</p>
-          <a href="#">Read more</a>
+          <div class="image">
+            <img src="./resources/images/information-orientation.jpg" alt="">
+          </div>
+          <div class="text">
+            <h4>Orientation date</h4>
+            <p>Tue 10/11 & Wed 10/12: 8am-9pm</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
 
         <div class="article">
-          <img src="./resources/images/information-campus.jpg" alt="">
-          <h4>Our campus</h4>
-          <p>Find which campus is close by you</p>
-          <a href="#">Read more</a>
+          <div class="image">
+            <img src="./resources/images/information-campus.jpg" alt="">
+          </div>
+          <div class="text">
+            <h4>Our campus</h4>
+            <p>Find which campus is close by you</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
 
         <div class="article">
-          <img src="./resources/images/information-guest-lecture.jpg" alt="">
-          <h4>Our guest lecture</h4>
-          <p>Join akeynote with Oliver Sack about music in medical treatment</p>
-          <a href="#">Read more</a>
+          <div class="image">
+            <img src="./resources/images/information-guest-lecture.jpg" alt="">
+          </div>
+          <div class="text">
+            <h4>Our guest lecture</h4>
+            <p>Join akeynote with Oliver Sack about music in medical treatment</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
       </div>
     </div>
@@ -87,44 +99,56 @@
       <div class="coursegrid">
         <div class="course">
           <img src="./resources/images/course-software.jpg" alt="">
-          <h4>Software engineering</h4>
-          <h5>Courses</h5>
-          <p>Web Development, Mobile Development, iOT,APIs</p>
+          <div class="coursetext">
+            <h4>Software engineering</h4>
+            <h5>Courses</h5>
+            <p>Web Development, Mobile Development, iOT,APIs</p>
+          </div>
         </div>
 
       <div class="course">
           <img src="./resources/images/course-computer-art.jpg" alt="">
-          <h4>Computer art</h4>
-          <h5>Courses</h5>
-          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          <div class="coursetext">
+            <h4>Computer art</h4>
+            <h5>Courses</h5>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          </div>
         </div>
 
         <div class="course">
           <img src="./resources/images/course-design.jpg" alt="">
-          <h4>Design</h4>
-          <h5>Courses</h5>
-          <p>User Experience Design, User Research, Visual Design</p>
+          <div class="coursetext">
+            <h4>Design</h4>
+            <h5>Courses</h5>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
         </div>
 
         <div class="course">
           <img src="./resources/images/course-Data.jpg" alt="">
-          <h4>Data</h4>
-          <h5>Courses</h5>
-          <p>Data Science, Big Data, SQL, Data Visualization</p>
+          <div class="coursetext">
+            <h4>Data</h4>
+            <h5>Courses</h5>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
         </div>
 
         <div class="course">
           <img src="./resources/images/course-business.jpg" alt="">
-          <h4>Business</h4>
-          <h5>Courses</h5>
-          <p>Product Development, Business Development, Startup</p>
+          <div class="coursetext">
+            <h4>Business</h4>
+            <h5>Courses</h5>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
         </div>
 
         <div class="course">
           <img src="./resources/images/course-marketing.jpg" alt="">
-          <h4>Marketing</h4>
-          <h5>Courses</h5>
-          <p>Analytics, Content Marketing, Mobile Marketing</p>
+          <div class="coursetext">
+            <h4>Marketing</h4>
+            <h5>Courses</h5>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
         </div>
       </div>
     </div>
@@ -132,26 +156,38 @@
     <!-- thesis exhibit section -->
     <div class="thesis">
       <h2>Thesis exhibit</h2>
-      <div class="video">
-        <video width="60%" height="auto" controls>
-          <source src="./resources/videos/thesis.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <h4>Reimagine urban</h4>
-        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-      </div>
-
-      <div class="articlelist">
-        <div class="article">
-          <img src="./resources/images/thesis-fisma.jpg" alt="">
-          <h4>Fisma: Design and</h4>
-          <p>Designer showcase ofnew prototype product</p>
+      <div class="thesiscontent">
+        <div class="video">
+          <video width="100%" height="auto" controls>
+            <source src="./resources/videos/thesis.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+          <div class="thesistext">
+            <h3>Reimagine urban</h3>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          </div>
         </div>
 
-        <div class="article">
-          <img src="./resources/images/thesis-now-and-then.jpg" alt="">
-          <h4>Now and then</h4>
-          <p>Research study about New York</p>
+        <div class="articlelist">
+          <div class="article">
+            <div class="image">
+              <img src="./resources/images/thesis-fisma.jpg" alt="">
+            </div>
+            <div class="text">
+              <h3>Fisma: Design and</h3>
+              <p>Designer showcase ofnew prototype product</p>
+            </div>
+          </div>
+
+          <div class="article">
+            <div class="image">
+              <img src="./resources/images/thesis-now-and-then.jpg" alt="">
+            </div>  
+            <div class="text">
+              <h3>Now and then</h3>
+              <p>Research study about New York</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -159,8 +195,12 @@
     <!-- footer section -->
     <footer>
       <p>&copy; 2016 Colmar Academy. All rights reserved</p>
-      <a href="#">Terms</a>
-      <a href="#">Privacy</a>
+      <nav>
+        <ul>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+      </nav>
     </footer>
 
   </body>
