Added somebug fixes and mobile view.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="./resources/images/banner.jpg" alt="">
       </div>
       <div class="colum2">
-        <h1>Lern something new everyday</h1>
+        <h1>Learn something new everyday</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         <div class="button"><a href="#">Start here</a>
         </div>
@@ -95,6 +95,15 @@
     <!-- course section -->
     <div class="coursesection">
       <h2>Start learning</h2>
+
+      <ul>
+        <li>Software engineering</li>
+        <li>Computer art</li>
+        <li>Design</li>
+        <li>Data</li>
+        <li>Business</li>
+        <li>Marketing</li>
+      </ul>
 
       <div class="coursegrid">
         <div class="course">
@@ -174,17 +183,17 @@
               <img src="./resources/images/thesis-fisma.jpg" alt="">
             </div>
             <div class="text">
-              <h3>Fisma: Design and</h3>
-              <p>Designer showcase ofnew prototype product</p>
+              <h4>Fisma: Design and</h4>
+              <p>Designer showcase of new prototype product</p>
             </div>
           </div>
 
           <div class="article">
             <div class="image">
               <img src="./resources/images/thesis-now-and-then.jpg" alt="">
-            </div>  
+            </div>
             <div class="text">
-              <h3>Now and then</h3>
+              <h4>Now and then</h4>
               <p>Research study about New York</p>
             </div>
           </div>
